[refac]: admin dashboard UI updated

--- a/Client/src/app/modules/admin/admin.component.html
+++ b/Client/src/app/modules/admin/admin.component.html
@@ -1,34 +1,1 @@
-<div [class.example-is-mobile]="mobileQuery.matches">
-    <mat-toolbar>
-        <span>My App</span>
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="drawer.toggle()">
-          <mat-icon >menu</mat-icon>
-        </button>
-        <span class="spacer"></span>
-        <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-          <mat-icon>favorite</mat-icon>
-        </button>
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-          <mat-icon>share</mat-icon>
-        </button>
-      </mat-toolbar>
-
-  <mat-sidenav-container class="example-container">
-    <mat-sidenav
-     #drawer 
-     [mode]="mobileQuery.matches ? 'over' : 'side'" 
-     [fixedInViewport]="mobileQuery.matches" 
-     [opened]="mobileQuery.matches ? false : true">
-      <mat-list role="list">
-        <mat-list-item role="listitem">
-            <a routerLink="/admin/dashboard">Dashboard</a>
-        </mat-list-item>
-        <mat-list-item role="listitem">Item 1</mat-list-item>
-        <mat-list-item role="listitem">Item 2</mat-list-item>
-        <mat-list-item role="listitem">Item 3</mat-list-item>
-      </mat-list>
-    </mat-sidenav>
-  
-        <router-outlet></router-outlet>
-  </mat-sidenav-container>
-</div>
+<app-navigation></app-navigation>
