--- a/Client/src/app/modules/admin/components/navigation/navigation.component.css
+++ b/Client/src/app/modules/admin/components/navigation/navigation.component.css
@@ -15,3 +15,31 @@
   top: 0;
   z-index: 1;
 }
+.sidenav-menu-tree-invisible {
+  display: none;
+}
+
+.sidenav-menu-tree ul,
+.sidenav-menu-tree li {
+  margin-top: 0;
+  margin-bottom: 0;
+  list-style-type: none;
+}
+
+.sidenav-menu-tree{
+  padding-inline: 16px;
+}
+
+.sidenav-menu-tree .mat-nested-tree-node div[role=group] {
+  padding-left: 10px;
+}
+
+.sidenav-menu-tree div[role=group] > .mat-tree-node {
+  padding-left: 10px;
+}
+.mat-tree-node{
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  font-size: 16px;
+}
