--- a/Client/src/app/modules/admin/components/navigation/navigation.component.html
+++ b/Client/src/app/modules/admin/components/navigation/navigation.component.html
@@ -5,9 +5,35 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar><img src="../../../../../favicon.ico" /></mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/dashboard" routerLinkActive="/dashboard">Dashboard</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item routerLink="/admin/dashboard" routerLinkActive="active">Dashboard</a>
+      
+      <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="sidenav-menu-tree">
+        <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+          <div class="mat-tree-node" (click)="treeControl.toggle(node)">
+            {{node.name}}
+            <button mat-icon-button matTreeNodeToggle
+                    [attr.aria-label]="'Toggle ' + node.name"
+                    (click)="$event.stopPropagation()">
+            </button>
+          </div>
+        </mat-tree-node>
+        <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+          <div class="mat-tree-node" (click)="treeControl.toggle(node)">
+            {{node.name}}
+            <button mat-icon-button matTreeNodeToggle
+                    [attr.aria-label]="'Toggle ' + node.name">
+              <mat-icon class="mat-icon-rtl-mirror">
+                {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+              </mat-icon>
+            </button>
+          </div>
+          <div [class.sidenav-menu-tree-invisible]="!treeControl.isExpanded(node)"
+               role="group">
+            <ng-container matTreeNodeOutlet></ng-container>
+          </div>
+        </mat-nested-tree-node>
+      </mat-tree>
+      
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
