--- a/Client/src/app/modules/admin/components/navigation/navigation.component.css
+++ b/Client/src/app/modules/admin/components/navigation/navigation.component.css
@@ -4,6 +4,7 @@
 
 .sidenav {
   width: 200px;
+  overflow: hidden;
 }
 
 .sidenav .mat-toolbar {
@@ -42,4 +43,7 @@
   justify-content: space-between;
   cursor: pointer;
   font-size: 16px;
+}
+mat-icon{
+  font-size: 22px;
 }
