--- a/Client/src/app/modules/admin/components/navigation/navigation.component.html
+++ b/Client/src/app/modules/admin/components/navigation/navigation.component.html
@@ -5,13 +5,13 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar><img src="../../../../../favicon.ico" /></mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/admin/dashboard" routerLinkActive="active">Dashboard</a>
-      
       <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="sidenav-menu-tree">
         <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
           <div class="mat-tree-node" (click)="treeControl.toggle(node)">
-            {{node.name}}
-            <button mat-icon-button matTreeNodeToggle
+            <mat-icon>{{node.icon}}</mat-icon>
+            <a mat-list-item routerLink={{node.url}} routerLinkActive="active">
+              {{node.name}}</a>
+            <button *ngIf="node.childern" mat-icon-button matTreeNodeToggle
                     [attr.aria-label]="'Toggle ' + node.name"
                     (click)="$event.stopPropagation()">
             </button>
@@ -19,7 +19,7 @@
         </mat-tree-node>
         <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
           <div class="mat-tree-node" (click)="treeControl.toggle(node)">
-            {{node.name}}
+            <mat-icon>{{node.icon}}</mat-icon> {{node.name}}
             <button mat-icon-button matTreeNodeToggle
                     [attr.aria-label]="'Toggle ' + node.name">
               <mat-icon class="mat-icon-rtl-mirror">
