--- a/Client/src/app/modules/public/public.component.html
+++ b/Client/src/app/modules/public/public.component.html
@@ -1,16 +1,6 @@
-<mat-toolbar class="topbar">
-    <button mat-icon-button class="facebook-icon" aria-label="Example icon-button with menu icon">
-        <mat-icon>facebook</mat-icon>
-    </button>
-    <span class="spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-        <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-        <mat-icon>share</mat-icon>
-    </button>
-</mat-toolbar>
+<app-navigation></app-navigation>
 
+<!-- Body -->
 <mat-grid-list cols="4" rowHeight="100px" gutterSize="0">
     @for (tile of tiles; track tile) {
       <mat-grid-tile
@@ -19,3 +9,5 @@
         [style.background]="tile.color">{{tile.text}}</mat-grid-tile>
     }
   </mat-grid-list>
+
+  <router-outlet></router-outlet>
