[refac]: reactive form used for login

--- a/Client/src/app/modules/public/components/navigation/navigation.component.html
+++ b/Client/src/app/modules/public/components/navigation/navigation.component.html
@@ -23,7 +23,7 @@
         </button>
     }
     @else {
-        <button mat-icon-button aria-label="Login icon">
+        <button mat-icon-button aria-label="Login icon" routerLink="/login">
             <mat-icon>login</mat-icon>
         </button>
     }
