--- a/Client/src/app/modules/public/components/login/login.component.html
+++ b/Client/src/app/modules/public/components/login/login.component.html
@@ -1,16 +1,36 @@
-<form #loginForm="ngForm" (ngSubmit)="onLogin()" autocomplete="off">
-    <label>Username</label>
-    <div class="mb-3">
-        <input name="email" [(ngModel)]="model.email"
-            type="text">
-    </div>
-    <label>Password</label>
-    <div class="mb-3">
-        <input name="password" [(ngModel)]="model.password"
-            type="password" />
-    </div>
-    <div class="text-center">
+<section>
+    <form [formGroup]="loginForm" (ngSubmit)="onLogin()" autocomplete="on">
+        <div>
+            <mat-form-field>
+                <mat-label>Email</mat-label>
+                <input
+                 matInput 
+                 placeholder="pat@example.com" 
+                 formControlName="email"
+                 required >
+                @if (this.loginForm.controls['email'].errors && this.loginForm.controls['email'].touched) {
+                <mat-error>
+                    Please enter your email
+                </mat-error>
+                }
+            </mat-form-field>
+        </div>
+        <div>
+            
+        <mat-form-field>
+            <mat-label>Password</mat-label>
+            <input
+             matInput 
+             placeholder="password"
+             formControlName="password"
+             required >
+            @if (this.loginForm.controls['password'].invalid) {
+            <mat-error>
+                Please enter password
+            </mat-error>
+            }
+        </mat-form-field>
+        </div>
         <button type="submit" class="btn btn-gradient w-100 mt-4 mb-0">Sign in</button>
-    </div>
-</form>
-
+    </form>
+</section>
