--- a/Client/src/app/modules/admin/components/customers/list-customers/list-customers.component.html
+++ b/Client/src/app/modules/admin/components/customers/list-customers/list-customers.component.html
@@ -1,49 +1,1 @@
-<div style="padding: 15px;">
-  <h1>Customers list</h1>
-  <div class="mat-elevation-z8">
-    <table mat-table class="full-width-table" matSort aria-label="Elements" [dataSource]="dataSource.data">
-      <!-- Id Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-        <td mat-cell *matCellDef="let row">{{row.id}}</td>
-      </ng-container>
-
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <td mat-cell *matCellDef="let row">{{row.username}}</td>
-      </ng-container>
-
-      <!-- Email Column -->
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-        <td mat-cell *matCellDef="let row">{{row.email}}</td>
-      </ng-container>
-
-      <!-- Active Column -->
-      <ng-container matColumnDef="active">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Active</th>
-        <td mat-cell *matCellDef="let row">
-          @if(row.active){
-          <ng-container>
-            <mat-icon style="color: green;">check</mat-icon>
-          </ng-container>
-          }
-          @else{
-          <ng-template>
-            <mat-icon style="color: red;">close</mat-icon>
-          </ng-template>
-          }
-        </td>
-      </ng-container>
-
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-
-    <mat-paginator #paginator [length]="dataSource.data.length" [pageIndex]="0" [pageSize]="5"
-      [pageSizeOptions]="[5, 10, 20]" aria-label="Select page">
-    </mat-paginator>
-  </div>
-</div>
+<p>Customer list</p>
