--- a/Client/src/app/modules/admin/components/navigation/navigation.component.html
+++ b/Client/src/app/modules/admin/components/navigation/navigation.component.html
@@ -1,54 +1,1 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar><img src="../../../../../favicon.ico" /></mat-toolbar>
-    <mat-nav-list>
-      <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="sidenav-menu-tree">
-        <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-          <div class="mat-tree-node" (click)="treeControl.toggle(node)">
-            <mat-icon>{{node.icon}}</mat-icon>
-            <a mat-list-item routerLink={{node.url}} routerLinkActive="active">
-              {{node.name}}</a>
-            <button *ngIf="node.childern" mat-icon-button matTreeNodeToggle
-                    [attr.aria-label]="'Toggle ' + node.name"
-                    (click)="$event.stopPropagation()">
-            </button>
-          </div>
-        </mat-tree-node>
-        <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
-          <div class="mat-tree-node" (click)="treeControl.toggle(node)">
-            <mat-icon>{{node.icon}}</mat-icon> {{node.name}}
-            <button mat-icon-button matTreeNodeToggle
-                    [attr.aria-label]="'Toggle ' + node.name">
-              <mat-icon class="mat-icon-rtl-mirror">
-                {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-              </mat-icon>
-            </button>
-          </div>
-          <div [class.sidenav-menu-tree-invisible]="!treeControl.isExpanded(node)"
-               role="group">
-            <ng-container matTreeNodeOutlet></ng-container>
-          </div>
-        </mat-nested-tree-node>
-      </mat-tree>
-      
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      @if (isHandset$ | async) {
-        <button
-          type="button"
-          aria-label="Toggle sidenav"
-          mat-icon-button
-          (click)="drawer.toggle()">
-          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-        </button>
-      }
-      <span>Client</span>
-    </mat-toolbar>
-    <router-outlet></router-outlet>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<p>Navigation</p>
