--- a/Client/src/app/modules/public/components/login/login.component.html
+++ b/Client/src/app/modules/public/components/login/login.component.html
@@ -1,39 +1,28 @@
-<section [class]="(isHandset$ | async) ? 'my-5' : 'mx-auto my-3'">
-    <mat-card class="loginForm-card"  
-     [class]="(isHandset$ | async) ? 'm-3' : 'mx-auto'">
-        <mat-card-header >
-            <mat-card-title>Welcome back</mat-card-title>
-            <mat-card-subtitle>Enter your credentials to sign in</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-            <form [formGroup]="loginForm" (ngSubmit)="onLogin()" autocomplete="on">
-                <div>
-                    <mat-form-field class="w-full">
-                        <mat-label>Email</mat-label>
-                        <input matInput placeholder="user@example.com" formControlName="email" required>
-                        @if (this.loginForm.controls['email'].errors && this.loginForm.controls['email'].touched) {
-                        <mat-error>
-                            Please enter your email
-                        </mat-error>
-                        }
-                    </mat-form-field>
-                </div>
-                <div>
-                    <mat-form-field class="w-full">
-                        <mat-label>Password</mat-label>
-                        <input matInput placeholder="password" formControlName="password" required>
-                        @if (this.loginForm.controls['password'].invalid) {
-                        <mat-error>
-                            Please enter password
-                        </mat-error>
-                        }
-                    </mat-form-field>
-                </div>
-                <button mat-flat-button color="primary" type="submit" class="w-full">
-                    <span>Sign in</span>
-                    <mat-icon iconPositionEnd>arrow_right_alt</mat-icon>
-                </button>
-            </form>
-        </mat-card-content>
-    </mat-card>
-</section>
+
+<form [formGroup]="loginForm" (ngSubmit)="onLogin()" autocomplete="on">
+    <div>
+        <div class="w-full">
+            <label>Email</label>
+            <input matInput placeholder="user@example.com" formControlName="email" required>
+            @if (this.loginForm.controls['email'].errors && this.loginForm.controls['email'].touched) {
+            <div>
+                Please enter your email
+            </div>
+            }
+        </div>
+    </div>
+    <div>
+        <div class="w-full">
+            <label>Password</label>
+            <input matInput placeholder="password" formControlName="password" required>
+            @if (this.loginForm.controls['password'].invalid) {
+            <div>
+                Please enter password
+            </div>
+            }
+        </div>
+    </div>
+    <button  color="primary" type="submit" class="w-full">
+        <span>Sign in</span>
+    </button>
+</form>
