--- a/Client/src/app/modules/public/components/navigation/navigation.component.html
+++ b/Client/src/app/modules/public/components/navigation/navigation.component.html
@@ -1,65 +1,168 @@
-<!-- Topbar -->
-<mat-toolbar class="topbar">
-    <button mat-icon-button class="facebook-icon" aria-label="Example icon-button with menu icon">
-        <mat-icon>facebook</mat-icon>
-    </button>
-    <span class="spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-        <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-        <mat-icon>share</mat-icon>
-    </button>
-</mat-toolbar>
+<header class="bg-white">
+    <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
+        <div class="flex lg:flex-1">
+            <a href="#" class="-m-1.5 p-1.5">
+                <span class="sr-only">Your Company</span>
+                <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
+            </a>
+        </div>
+        <!-- Mobile toggler start-->
+        <div class="flex lg:hidden">
+            <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700"
+                (click)="isToggle = !isToggle">
+                <span class="sr-only">Open main menu</span>
+                <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                    aria-hidden="true" [ngClass]="{'rotate-180': isToggle, '': !isToggle}">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                </svg>
+            </button>
+        </div>
 
-<!-- Navbar -->
-<mat-toolbar class="navbar">
-    <div>
-        <span>ngCommerce</span>
+        <!-- Dropdown Menu -->
+        <div class="hidden lg:flex lg:gap-x-12">
+            @for(menu of menuList; track menu){
+                @if(menu.subMenu){
+                <div class="relative" (click)="toggleSubMenu(menu)">
+                    <button type="button" class="flex items-center gap-x-1 text-sm font-medium leading-6 text-gray-900"
+                        [attr.aria-expanded]="isToggle" (click)="isToggle = !isToggle">
+                        {{menu.title}}
+                        <svg class="h-5 w-5 flex-none text-gray-400" viewBox="0 0 20 20" fill="currentColor"
+                            aria-hidden="true" [ngClass]="{'rotate-180': menu.isToggle, '': !menu.isToggle}">
+                            <path fill-rule="evenodd"
+                                d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
+                                clip-rule="evenodd" />
+                        </svg>
+                    </button>
+                    <div class="absolute -left-8 top-full z-10 mt-3 w-screen max-w-md overflow-hidden rounded-3xl bg-white shadow-lg ring-1 ring-gray-900/5"
+                        [@dropdownInOut]="isToggle ? 'in' : 'void'"
+                        [style]="isToggle ? 'display : block' : 'display: none'">
+                        <div class="p-4">
+                            @for(subMenu of menu.subMenu; track subMenu){
+                            <div
+                                class="group relative flex items-center gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-100">
+                                <div
+                                    class="flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
+
+                                    <fa-icon [icon]="subMenu.icon"
+                                        class="h-6 w-6 text-gray-600 group-hover:text-indigo-600"></fa-icon>
+                                </div>
+                                <div class="flex-auto">
+                                    <a routerLink={{subMenu.route}}
+                                        class="block font-mediumtext-gray-900 group-hover:text-indigo-600">
+                                        {{subMenu.title}}
+                                        <span class="absolute inset-0"></span>
+                                    </a>
+                                    <p class="mt-1 text-gray-600 group-hover:text-indigo-600">
+                                        {{subMenu.desc}}</p>
+                                </div>
+                            </div>
+                            }
+                        </div>
+                    </div>
+                </div>
+                }
+                @else {
+                <a routerLink={{menu.route}}
+                    class="text-sm font-medium leading-6 text-gray-900 hover:text-indigo-600 transition-all ease-in-out duration-300">
+                    @if(menu.icon){
+                    <fa-icon [icon]="menu.icon"></fa-icon>
+                    }
+                    {{menu.title}}
+                </a>
+                }
+            }
+
+        </div>
+
+        <!-- Login/Logout button -->
+        <div class="hidden lg:flex lg:flex-1 lg:justify-end">
+            @if((_accountService.currentUser$ | async)){
+            <a (click)="logout()"
+                class="text-sm font-mediumleading-6 text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 cursor-pointer hover:shadow-transparent">
+                <span aria-hidden="true">&larr;</span>
+                Log out
+            </a>
+            }
+            @else {
+            <a routerLink="/login"
+                class="text-sm font-mediumleading-6 text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 hover:shadow-transparent">Log
+                in <span aria-hidden="true">&rarr;</span></a>
+            }
+        </div>
+    </nav>
+
+    <!-- Mobile menu, show/hide based on menu open state. -->
+    <div class="lg:hidden" role="dialog" aria-modal="true" [style]="isToggle ? '' : 'display: none'">
+        <!-- Background backdrop, show/hide based on slide-over state. -->
+        <div class="fixed inset-0 z-10"></div>
+        <div
+            class="fixed inset-y-0 right-0 z-10 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
+            <div class="flex items-center justify-between">
+                <a href="#" class="-m-1.5 p-1.5">
+                    <span class="sr-only">Your Company</span>
+                    <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
+                        alt="">
+                </a>
+                <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700" (click)="isToggle = !isToggle">
+                    <span class="sr-only">Close menu</span>
+                    <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                        aria-hidden="true">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                    </svg>
+                </button>
+            </div>
+            <div class="mt-6 flow-root">
+                <div class="-my-6 divide-y divide-gray-500/10">
+                    <div class="space-y-2 py-6">
+                        @for(menu of menuList; track menu){
+                        @if(menu.subMenu){
+                        <div class="-mx-3">
+                            <button type="button"
+                                class="flex w-full items-center justify-between rounded-lg py-2 pl-3 pr-3.5 text-base font-medium leading-7 text-gray-900 hover:bg-gray-100"
+                                aria-controls="disclosure-1" aria-expanded="false" (click)="toggleSubMenu(menu)">
+                                {{menu.title}}
+
+                                <svg class="h-5 w-5 flex-none text-gray-400" viewBox="0 0 20 20" fill="currentColor"
+                                    aria-hidden="true" [ngClass]="{'rotate-180': menu.isToggle, '': !menu.isToggle}">
+                                    <path fill-rule="evenodd"
+                                        d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
+                                        clip-rule="evenodd" />
+                                </svg>
+
+                            </button>
+                            <!-- 'Product' sub-menu, show/hide based on menu state. -->
+                            <div class="mt-2 space-y-2" id="disclosure-1"
+                                [style]="(menu.isToggle) ? '' : 'display:none;'">
+                                @for(subMenu of menu.subMenu; track subMenu){
+                                <a routerLink={{subMenu.route}}
+                                    class="block rounded-lg py-2 pl-6 pr-3 text-sm font-normal leading-7 text-gray-700 hover:bg-gray-100">{{subMenu.title}}</a>
+                                }
+                            </div>
+                        </div>
+                        }
+                        @else {
+                        <a href="#"
+                            class="-mx-3 block rounded-lg px-3 py-2 text-base font-medium leading-7 text-gray-900 hover:bg-gray-100">{{menu.title}}</a>
+                        }
+                        }
+                    </div>
+                    <div class="py-6">
+                        @if((_accountService.currentUser$ | async)){
+                        <a routerLink="/login"
+                            class="text-sm font-mediumleading-6 text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50">
+                            <span aria-hidden="true">&larr;</span>
+                            Log out
+                        </a>
+                        }
+                        @else {
+                        <a routerLink="/login"
+                            class="font-medium leading-6 text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50">Log
+                            in <span aria-hidden="true">&rarr;</span></a>
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div>
-        <h3>Search bar</h3>
-    </div>
-
-    <div class="d-flex align-items-center">
-        <button mat-icon-button aria-label="Wishlist heart icon">
-            <mat-icon class="count">favorite</mat-icon>
-            <small>
-                <span class="count-item">
-                    2
-                </span>
-            </small>
-        </button>
-        <button mat-icon-button aria-label="Shopping cart icon">
-            <mat-icon class="count">shopping_cart</mat-icon>
-            <small>
-                <span class="count-item">
-                    2
-                </span>
-            </small>
-        </button>
-        <button mat-icon-button aria-label="Menu icon" (click)="drawer.toggle()">
-            <mat-icon>menu</mat-icon>
-        </button>
-
-        @if((accountService.currentUser$ | async)){
-        <button mat-flat-button color="primary" type="button" (click)="logout()">
-            <span>Logout</span>
-            <mat-icon iconPositionEnd>logout</mat-icon>
-        </button>
-        }
-        @else {
-        <button mat-flat-button color="primary" type="button" routerLink="/login" >
-            <span>Login</span>
-            <mat-icon iconPositionEnd>login</mat-icon>
-        </button>
-        }
-    </div>
-
-</mat-toolbar>
-<mat-drawer-container class="example-container" autosize>
-<mat-drawer #drawer class="example-sidenav" mode="side">
-    <p>Auto-resizing sidenav</p>
-    <p>Lorem, ipsum dolor sit amet consectetur.</p>
-</mat-drawer></mat-drawer-container>
+</header>
