--- a/Client/src/app/modules/public/components/footer/footer.component.html
+++ b/Client/src/app/modules/public/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="relative bg-[#e2e8f0] pt-8 pb-6">
-    <div class="container mx-auto px-4">
+    <div class="container mx-auto px-4 max-w-7xl ">
         <div class="flex flex-wrap text-left lg:text-left">
             <div class="w-full lg:w-6/12 px-4">
                 <h4 class="text-3xl fonat-semibold">Let's keep in touch!</h4>
