[refac]: admin UI updated, method added to check current user in service

--- a/Client/src/app/modules/public/components/login/login.component.html
+++ b/Client/src/app/modules/public/components/login/login.component.html
@@ -19,7 +19,7 @@
           <div class="relative">
             <input
               type="email"
-              class="w-full rounded-lg border-gray-200 p-4 pe-12 text-sm shadow-sm"
+              class="w-full rounded-lg border-gray-200 p-4 pe-12 text-sm shadow-sm focus:outline-none"
               placeholder="user@example.com" 
               formControlName="email" 
               required
@@ -38,7 +38,7 @@
           <div class="relative">
             <input
               type="password"
-              class="w-full rounded-lg border-gray-200 p-4 pe-12 text-sm shadow-sm"
+              class="w-full rounded-lg border-gray-200 p-4 pe-12 text-sm shadow-sm focus:outline-none"
               placeholder="password" 
               formControlName="password" 
               required
