--- a/Client/src/app/modules/admin/admin.component.html
+++ b/Client/src/app/modules/admin/admin.component.html
@@ -1,1 +1,7 @@
 <app-navigation></app-navigation>
+
+<div class="p-4 lg:ml-64">
+    <div class="p-4 mt-12">
+        <router-outlet></router-outlet>
+    </div>
+</div>
