[feat]: flowbite installed

--- a/Client/src/app/modules/public/components/navigation/navigation.component.html
+++ b/Client/src/app/modules/public/components/navigation/navigation.component.html
@@ -16,7 +16,7 @@
             <form class="mr-2 border rounded-md bg-white">
                 <div class="relative">
                     <input type="text" placeholder="Search..."
-                        class="block w-full appearance-none bg-transparent py-1 pl-4 pr-12 text-base text-slate-900 placeholder:text-slate-600 focus:outline-none sm:text-sm sm:leading-6" />
+                        class="block w-full rounded-md border-hidden appearance-none bg-transparent py-1 pl-4 pr-12 text-base text-slate-900 placeholder:text-slate-600 focus:outline-none sm:text-sm sm:leading-6" />
                     <svg class="pointer-events-none absolute right-2 top-1 h-6 w-6 fill-slate-400"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
